Fixed blurriness for error messages

--- a/front-end/src/app/app.component.css
+++ b/front-end/src/app/app.component.css
@@ -36,7 +36,3 @@ html, body, .darkMode {
     text-align: center;
     font-family: Arial, sans-serif;
 }
-
-.error {
-    color: red;
-}
